refactor invoice-no (partly defunct)

--- a/README.org
+++ b/README.org
@@ -60,6 +60,10 @@ writing templates:
 
 ** Semantics
 
+Through the code events should be called `evt`, instead of e.g.
+`invoice` or `settlement`. This is mostly because its shorter and it
+makes copying or refactoring less error prone.
+
 | type       | path        | modus     |
 |------------+-------------+-----------|
 | settlement | date        | required  |
