--- a/README.org
+++ b/README.org
@@ -1,5 +1,7 @@
 * Welcome to EASY - Evented Accounting Sourced from Yaml
 
+[[./img/easy_logo.png]]
+
 ** Introduction
 
 =easy= is a command line utility which generates artifacts typically
