--- a/README.org
+++ b/README.org
@@ -184,7 +184,8 @@ description: Bankgebühren
 #+END_SRC
 
 Any list will be interpreted as a list of events, likewise any
-associative will be interpreted as template.
+associative will be interpreted as template. Templates will completely
+replace any previous template.
 
 Here is another example:
 
@@ -208,12 +209,10 @@ Will result in the following data structure:
 - a: 1
   b: 2
   c: 3
-- a: 1
-  b: 4
+- b: 4
   d: 5
   e: 6
-- a: 1
-  b: 4
+- b: 4
   d: 5
   f: 7
 #+end_src
